# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/test.gni")

module_output_path = "updater/updater_test"

config("utest_config") {
  visibility = [ "./*" ]
  visibility += [
    "//base/startup/appspawn/test/unittest/*",
    "//base/startup/init/test/unittest/*",
    "//base/update/sys_installer/test/unittest/*",
  ]

  cflags = [
    "--coverage",
    "-fprofile-arcs",
    "-Wno-implicit-fallthrough",
    "-Wno-unused-function",
  ]
  cflags_cc = [
    "-Wno-implicit-fallthrough",
    "-fexceptions",
  ]

  ldflags = [ "--coverage" ]

  defines = [
    "UPDATER_UT",
    "BUILD_OHOS",
    "HDC_DEBUG",
    "HDC_SUPPORT_FLASHD",
    "HARMONY_PROJECT",
  ]
}

ohos_unittest("updater_unittest") {
  testonly = true
  resource_config_file =
      "../../test/unittest/test_data/ohos_test.xml"
  module_out_path = module_output_path
  sources = [
    "diffpatch/bzip2_unittest.cpp",
    "diffpatch/diffpatch_unittest.cpp",
    "log_test/log_unittest.cpp",
    "misc_info_test/misc_info_unittest.cpp",
    "ptable_parse_test/ptable_manager_unittest.cpp",
    "ptable_parse_test/ptable_unittest.cpp",
    "updaterkits_test/updaterkits_unittest.cpp",
  ]

  sources += [
    "$root_out_dir/updater/updater/yacc/lexer.cpp",
    "$root_out_dir/updater/updater/yacc/parser.cpp",
    "../../interfaces/kits/misc_info/misc_info.cpp",
    "../../interfaces/kits/packages/package.cpp",
    "../../interfaces/kits/updaterkits/updaterkits.cpp",
    "../../services/diffpatch/bzip2/bzip2_adapter.cpp",
    "../../services/diffpatch/bzip2/lz4_adapter.cpp",
    "../../services/diffpatch/bzip2/zip_adapter.cpp",
    "../../services/diffpatch/diff/blocks_diff.cpp",
    "../../services/diffpatch/diff/image_diff.cpp",
    "../../services/diffpatch/diff/update_diff.cpp",
    "../../services/diffpatch/diffpatch.cpp",
    "../../services/diffpatch/patch/blocks_patch.cpp",
    "../../services/diffpatch/patch/image_patch.cpp",
    "../../services/diffpatch/patch/update_patch.cpp",
    "../../services/log/log.cpp",
    "../../services/package/pkg_algorithm/pkg_algo_deflate.cpp",
    "../../services/package/pkg_algorithm/pkg_algo_digest.cpp",
    "../../services/package/pkg_algorithm/pkg_algo_lz4.cpp",
    "../../services/package/pkg_algorithm/pkg_algo_sign.cpp",
    "../../services/package/pkg_algorithm/pkg_algorithm.cpp",
    "../../services/package/pkg_manager/pkg_managerImpl.cpp",
    "../../services/package/pkg_manager/pkg_stream.cpp",
    "../../services/package/pkg_manager/pkg_utils.cpp",
    "../../services/package/pkg_package/pkg_gzipfile.cpp",
    "../../services/package/pkg_package/pkg_lz4file.cpp",
    "../../services/package/pkg_package/pkg_pkgfile.cpp",
    "../../services/package/pkg_package/pkg_upgradefile.cpp",
    "../../services/package/pkg_package/pkg_zipfile.cpp",
    "../../services/ptable_parse/ptable.cpp",
    "../../services/ptable_parse/ptable_manager.cpp",
    "../../services/ptable_parse/ufs_ptable.cpp",
    "../../services/script/script_instruction/script_basicinstruction.cpp",
    "../../services/script/script_instruction/script_instructionhelper.cpp",
    "../../services/script/script_instruction/script_loadscript.cpp",
    "../../services/script/script_instruction/script_registercmd.cpp",
    "../../services/script/script_instruction/script_updateprocesser.cpp",
    "../../services/script/script_interpreter/script_context.cpp",
    "../../services/script/script_interpreter/script_expression.cpp",
    "../../services/script/script_interpreter/script_function.cpp",
    "../../services/script/script_interpreter/script_interpreter.cpp",
    "../../services/script/script_interpreter/script_param.cpp",
    "../../services/script/script_interpreter/script_scanner.cpp",
    "../../services/script/script_interpreter/script_statement.cpp",
    "../../services/script/script_manager/script_managerImpl.cpp",
    "../../services/script/script_manager/script_utils.cpp",
    "../../services/script/threadpool/threadpool.cpp",
    "../../services/updater_utils.cpp",
    "../../utils/utils.cpp",
  ]

  include_dirs = [
    "../../interfaces/kits/include/",
    "../../interfaces/kits/include/package",
    "../../services/include/",
    "../../utils/include/",
    "../../utils/json/",
    "../../services/",
    "../../services/include/package",
    "../../services/include/script",
    "../../services/include/log",
    "../../services/include/patch",
    "../../services/include/updater",
    "../../services/script/script_instruction",
    "../../services/script/script_interpreter",
    "../../services/script/script_manager",
    "../../services/script/threadpool",
    "$root_out_dir/updater/updater/yacc",
    "../../services/package/pkg_algorithm",
    "../../services/package/pkg_manager",
    "../../services/package/pkg_package",
    "../../services/package/pkg_verify",
    "../../services/include/fs_manager",
    "../../services/fs_manager",
    "../../services/applypatch",
    "../../services/diffpatch",
    "../../services/diffpatch/diff",
    "../../services/diffpatch/patch",
    "../../services/diffpatch/bzip2",
    "../../services/ui",
    "../../test/unittest",
    "../../services/ptable_parse",
    "//developtools/hdc/src/common",
    "//developtools/hdc/src/host",
    "//developtools/hdc/src/daemon",
    "//third_party/zlib",
    "//third_party/lz4/lib",
    "//third_party/bounds_checking_function/include",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/cJSON",
    "//third_party/curl/include",
    "//third_party/openssl/include",
    "//third_party/bzip2",
    "//third_party/libdrm/include/drm",
    "//third_party/libdrm",
    "//third_party/googletest/googletest/include",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/core",
    "//drivers/framework/include/osal",
    "//drivers/framework/include/utils",
    "//drivers/framework/include/config",
    "//drivers/framework/include",
    "//drivers/peripheral/input/hal/include",
    "//drivers/peripheral/input/interfaces/include",
    "//drivers/peripheral/partitionslot/hal/include",
    "//third_party/bounds_checking_function/include",
  ]
  deps = [
    "../../interfaces/kits/misc_info:libmiscinfo",
    "../../services/applypatch:libapplypatch",
    "../../services/diffpatch/diff:libdiff",
    "../../services/diffpatch/patch:libpatch",
    "../../services/fs_manager:libfsmanager",
    "../../services/log:libupdaterlog",
    "../../services/package:libupdaterpackage",
    "../../services/ui:libui",
    "../../utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/cJSON:cjson",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libuv:uv",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:libcrypto_static",
    "//third_party/openssl:ssl_source",
    "//third_party/zlib:libz",
  ]

  deps += [
    "../../services/script:gen_yacc",
    "../../test/unittest:test_update_binary",
    "../../test/unittest:test_update_binary_abnormal",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  public_configs = [ ":utest_config" ]
  install_enable = true
  part_name = "updater"
}

ohos_executable("test_update_binary") {
  sources = [ "updater_test/test_update_binary.cpp" ]
  install_enable = true
  part_name = "updater"
  subsystem_name = "updater"
}

ohos_executable("test_update_binary_abnormal") {
  sources = [ "updater_test/test_update_binary_abnormal.cpp" ]
  install_enable = true
  part_name = "updater"
  subsystem_name = "updater"
}
