# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

ohos_static_library("libdiff_patch") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "../../../interfaces/kits/include",
    "../../../services/include",
    "../../../services/include/patch",
    "//third_party/openssl/include",
  ]

  deps = [ "../../../services/diffpatch/patch:libpatch" ]
}

ohos_shared_library("libdiff_patch_shared") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "../../../interfaces/kits/include",
    "../../../services/include",
    "../../../services/include/patch",
    "//third_party/openssl/include",
  ]

  deps = [
    "../../../interfaces/kits/misc_info:libmiscinfo",
    "../../../services/applypatch:libapplypatch",
    "../../../services/diffpatch/patch:libpatch",
    "../../../services/fs_manager:libfsmanager",
    "../../../services/log:libupdaterlog",
    "../../../services/package:libupdaterpackage",
    "../../../services/ptable_parse:libptableparse",
    "../../../utils:libutils",
  ]

  subsystem_name = "updater"
  part_name = "updater"
}
