# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")

config("libdiff_patch_exported_headers") {
  visibility = [ ":*" ]
  include_dirs = [ "${updater_path}/interfaces/kits/include" ]
}

ohos_static_library("libdiff_patch") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/common",
    "${updater_path}/services/include",
    "${updater_path}/services/include/patch",
    "${updater_path}/utils/include",
  ]

  public_configs = [ ":libdiff_patch_exported_headers" ]
  deps = [ "${updater_path}/services/diffpatch/patch:libpatch" ]
  external_deps = [ "openssl:libcrypto_shared" ]

  subsystem_name = "updater"
  part_name = "updater"
}

ohos_shared_library("libdiff_patch_shared") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/common",
    "${updater_path}/services/include",
    "${updater_path}/services/include/patch",
    "${updater_path}/utils/include",
  ]

  public_configs = [ ":libdiff_patch_exported_headers" ]
  deps = [
    "${updater_path}/interfaces/kits/packages:libpackage_shared",
    "${updater_path}/services/diffpatch/patch:libpatch_shared",
  ]
  external_deps = [ "openssl:libcrypto_shared" ]

  subsystem_name = "updater"
  part_name = "updater"
}
