# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")

config("libmiscinfo_exported_headers") {
  visibility = [ ":*" ]
  include_dirs = [
    "${updater_path}/interfaces/kits/include"
  ]
}

ohos_static_library("libmiscinfo") {
  sources = [ "misc_info.cpp" ]

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/common",
    "${updater_path}/services/include",
    "${updater_path}/utils/include",
    "//third_party/bounds_checking_function/include",
  ]

  public_configs = [ ":libmiscinfo_exported_headers" ]

  deps = [
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/log:libupdaterlog",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [ "init:libbegetutil" ]

  subsystem_name = "updater"
  part_name = "updater"
}
