# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")
ohos_static_library("libslotinfo") {
  sources = [ "slot_info.cpp" ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/include",
    "${updater_path}/utils/include",
  ]

  deps = [ "${updater_path}/services/log:libupdaterlog" ]
  if (init_feature_ab_partition) {
    defines = [ "UPDATER_AB_SUPPORT" ]
    external_deps = [
      "drivers_peripheral_partitionslot:libpartition_slot_manager",
    ]
  }

  subsystem_name = "updater"
  part_name = "updater"
}
