# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = "../../.."
ohos_static_library("libringbuffer") {
  sources = [ "ring_buffer.cpp" ]

  include_dirs = [
    "${updater_path}/services/include/log",
    "${updater_path}/utils/include",
  ]
  deps = [
    "${updater_path}/services/log:libupdaterlog",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  subsystem_name = "updater"
  part_name = "updater"
}
